--- a/App-test-csharp/App-test-csharp.csproj
+++ b/App-test-csharp/App-test-csharp.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClassesLibrary\ClassesLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
