--- a/App-test-csharp/App-test-csharp.csproj
+++ b/App-test-csharp/App-test-csharp.csproj
@@ -9,7 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="user.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ClassesLibrary\ClassesLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="user.png" />
   </ItemGroup>
 
 </Project>
