--- a/ClassesLibrary/ClassesLibrary.csproj
+++ b/ClassesLibrary/ClassesLibrary.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\App-test-csharp\App-test-csharp.csproj" />
+  </ItemGroup>
+
 </Project>
