--- a/App-test-csharp/App-test-csharp.csproj
+++ b/App-test-csharp/App-test-csharp.csproj
@@ -16,4 +16,12 @@
     <Resource Include="user.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="View\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Include="App.xaml" />
+  </ItemGroup>
+
 </Project>
